# glass-portfolio

./: README.md  db.sqlite3  index.html  pyproject.toml  style.css
glass/: settings.py  urls.py
glassapp/: apps.py  views.py
glassapp/static/css/: style.css
templates/: index.html
