[tool.poetry]
name = "glass-portfolio"
version = "0.1.0"
description = "My coding resume and projects put into a easy to use website for future employers."
authors = ["CodingBgirl <bgirlapollo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
